--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,15 @@
 [tool.poetry]
 name = "ai-testcase-generator"
 version = "0.1.0"
-description = "AI를 활용한 간단한 테스트케이스 생성기"
+description = "Jira 연동 AI 테스트케이스 생성기 - Jira 태스크를 기반으로 테스트케이스 자동 생성"
 authors = ["yjnoh <yjnoh@spectra.co.kr>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
 click = "^8.2.1"
-
-[tool.poetry.scripts]
-testgen = "ai_testcase_generator.main:cli"
+streamlit = "^1.46.1"
+atlassian-python-api = "^4.0.4"
 
 [build-system]
 requires = ["poetry-core"]
