--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 click = "^8.2.1"
 streamlit = "^1.46.1"
 atlassian-python-api = "^4.0.4"
+openai = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
