--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ click = "^8.2.1"
 streamlit = "^1.46.1"
 atlassian-python-api = "^4.0.4"
 openai = "^1.3.0"
+requests = "^2.25.0"
 
 [build-system]
 requires = ["poetry-core"]
