docker image 빌드설정

--- a/config.json.example
+++ b/config.json.example
@@ -22,7 +22,7 @@
     "default_test_count": 5,
     "auto_connect": true,
     "auto_connect_ai": true,
-    "auto_connect_testrail": false,
+    "auto_connect_testrail": true,
     "theme": "light"
   }
 } 
